# binRev

./: .gitignore  README.md
arch/: README.md  stage-s00-case-initialization.md  stage-s04-el2-architecture.md  stage-s05-function-clustering.md  stage-s05-runtime-object-model.md  stage-s06-type-propagation.md  stage-s06-vm-service-model.md  stage-s07-ida-decompile-optimization.md  stage-s07-security-lifecycle.md  stage-s08-repository-synthesis.md  stage-s08-source-lifting.md  stage-s09-static-audit.md  stage-s10-delivery-package.md
prototypes/static-analysis-mvp/: README.md  pyproject.toml
prototypes/static-analysis-mvp/config/: ida-actions.example.json
prototypes/static-analysis-mvp/scripts/ida/: hvrev_ida_bridge.py
prototypes/static-analysis-mvp/src/hvrev/: __init__.py  __main__.py  aarch64.py  cli.py  database.py  elf.py  ida.py  image.py  knowledge.py  models.py  pipeline.py  repository.py  security.py
prototypes/static-analysis-mvp/tests/: __init__.py  test_aarch64.py  test_ida.py  test_image.py  test_pipeline.py
skills/analyze-arm64-image-layout/: SKILL.md
skills/apply-reviewed-ida-changes/: SKILL.md
skills/check-hypervisor-security-invariants/: SKILL.md
skills/check-recovered-code-consistency/: SKILL.md
skills/classify-binary-regions/: SKILL.md
specifications/: skill-architecture.md  skill-catalog.md  skill-forward-tests-round2-v2.md  skill-forward-tests-s07-rw1.md  skill-forward-tests-s08-rw1.md  skill-forward-tests-s09-rw1.md  skill-forward-tests-s10-rw1.md  skill-forward-tests.md  stage-audit.md  workflow-source-recovery-v2.md  workflow.md
(+130 files in other folders)
