[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hvrev"
version = "0.1.0"
description = "Early static-analysis prototype for the AI Native recovery workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "hvrev contributors" }]
dependencies = []

[project.scripts]
hvrev = "hvrev.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
